[package]
name = "struct_gen"
version = "0.1.1"
authors = ["robertdurst <rsdurst@colby.edu>"]
description = "Automagically generate structs."
repository = "https://github.com/robertDurst/struct_gen"
readme = "README.md"
keywords = ["macro", "struct", "gen"]
categories = ["development-tools"]
license = "MIT"

[dependencies]
struct_gen_derive = "0.1.0"